# ldpc

./: CMakeLists.txt  Readme.md  encoder.h
include/: argument_parser.h  binary_erasure.h  binary_symmetric.h  burst_error.h  decoder.h  encoder.h  gaussianNoise.h  gaussian_noise.h  input.h  input_string.h  noisy_channel.h  params.h  preprocessing.h
simulation/: awgn_sim.py  bec_sim.py  bsc_sim.py  burst_sim.py  results_awgn.csv  results_bec.csv  results_bsc.csv  results_burst.csv
src/: argument_parser.cpp  binary_erasure.cpp  binary_symmetric.cpp  burst_error.cpp  decoder.cpp  encoder.cpp  gaussianNoise.cpp  input.cpp  input_string.cpp  main  main.cpp  noisy_channel.cpp  preprocessing.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/noisy_channel/: binary_erasure.cpp  binary_symmetric.cpp  burst_error.cpp  gaussian_noise.cpp  noisy_channel.cpp
tests/: gaussian_transmission.cpp  kantenliste.cpp
testsAndNotes/: input.cpp  test.ipynb
